--- a/Ex02.md
+++ b/Ex02.md
@@ -1,7 +1,7 @@
 # Ex. No : 2	
 # GENERATION OF LEXICAL TOKENS LEX/FLEX TOOL
-## Register Number :
-## Date : 
+## Register Number : 212223110033
+## Date : 24-04-2025
 
 ## AIM   
 To write a lex program to implement lexical analyzer to recognize a few patterns.
